umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_succinate.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: carbonyl_derivatives
atom_typing:
  success: false
  error:
    error_type: ValenceAmbiguous
    message: "Valence ambiguous for atom O at index 1 has 3 valence matches: {O/2v2}, {O/1v2a2}, {O+/1v2a1}"
counts:
  success: true
  summary:
    atom_count: 8
    bond_count: 7
    topology: Gw??aW
    atoms:
      - "{Cv4}"
      - "{O/2v2}"
      - "{O-/3v1}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{Cv4}"
      - "{O/2v2}"
      - "{O-/3v1}"
    bonds:
      - "="
      - "-"
      - "-"
      - "-"
      - "-"
      - "="
      - "-"
