umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_succinimide.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: carbonyl_derivatives
atom_typing:
  success: true
  summary:
    atom_count: 7
    bond_count: 7
    topology: FoOt?
    atoms:
      - "C#h2#v2"
      - "C#h2#v2"
      - "C#v4"
      - "C#v4"
      - "N#h#n#v2"
      - "O#n2#v2"
      - "O#n2#v2"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "="
      - "-"
      - "="
counts:
  success: true
  summary:
    atom_count: 7
    bond_count: 7
    topology: FoOt?
    atoms:
      - "C#h2#v2"
      - "C#h2#v2"
      - "C#v4"
      - "C#v4"
      - "N#h#n#v2"
      - "O#n2#v2"
      - "O#n2#v2"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "="
      - "-"
      - "="
