umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_tartaric-acid.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: carbonyl_derivatives
atom_typing:
  success: true
  summary:
    atom_count: 10
    bond_count: 9
    topology: Iw???o@_o
    atoms:
      - "{Cv4}"
      - "{O/2v2}"
      - "{O/2H1v1}"
      - "{CH1v3}"
      - "{O/2H1v1}"
      - "{CH1v3}"
      - "{O/2H1v1}"
      - "{Cv4}"
      - "{O/2v2}"
      - "{O/2H1v1}"
    bonds:
      - "="
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "="
      - "-"
counts:
  success: true
  summary:
    atom_count: 10
    bond_count: 9
    topology: Iw???o@_o
    atoms:
      - "{Cv4}"
      - "{O/2v2}"
      - "{O/2H1v1}"
      - "{CH1v3}"
      - "{O/2H1v1}"
      - "{CH1v3}"
      - "{O/2H1v1}"
      - "{Cv4}"
      - "{O/2v2}"
      - "{O/2H1v1}"
    bonds:
      - "="
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "="
      - "-"
