umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@covalent_ash2.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: covalent
atom_typing:
  success: true
  summary:
    atom_count: 3
    bond_count: 2
    topology: Bo
    atoms:
      - "{As/1^1v2}"
      - "{Hv1}"
      - "{Hv1}"
    bonds:
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 3
    bond_count: 2
    topology: Bo
    atoms:
      - "{As/1^1v2}"
      - "{Hv1}"
      - "{Hv1}"
    bonds:
      - "-"
      - "-"
