umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@covalent_bf2.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: covalent
atom_typing:
  success: true
  summary:
    atom_count: 3
    bond_count: 2
    topology: Bo
    atoms:
      - "{B^1v2}"
      - "{F/3v1}"
      - "{F/3v1}"
    bonds:
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 3
    bond_count: 2
    topology: Bo
    atoms:
      - "{B^1v2}"
      - "{F/3v1}"
      - "{F/3v1}"
    bonds:
      - "-"
      - "-"
